# article_writer

./: .env.example  .gitignore  README.md  TYPESET_GUIDE.md  pyproject.toml  requirements.txt
article_writer/: __init__.py  config.py  options.py  registry.py  schema.py
article_writer/interfaces/: __init__.py  base.py
article_writer/models/: base.py  image_client.py  llm_client.py
article_writer/pipeline/: article_generator.py  article_pipeline.py  image_prompter.py  publisher.py  typeset_pipeline.py  typesetter.py  writing_pipeline.py
article_writer/prompts/: __init__.py  article_spec.py  builder.py  core_prompts.py  image_preset.py  writer_preset.py
article_writer/style/: analyzer.py
article_writer/templates/: wechat.html
article_writer/utils/: html_builder.py  progress_log.py
examples/: demo.py  full_pipeline_demo.py  generate_style_samples.py  quickstart.py  run_new_article.py  run_womens_day_movies.py  speed_test.py  test_aspect_ratio_prompt.py  test_image_size_vs_prompt.py  test_thinking_off.py  theme_showcase.py  typeset_claude_article.py  typeset_education.py  typeset_openclaw_article.py  writing_demo.py
tests/: test_image_prompt_presets.py  test_image_sizes.py  test_persona_style_decoupling.py  test_pipeline_progress_logs.py  test_title_preservation.py
